Some axis tick fixes including making them not blurry

--- a/loe/site_static/loe.css
+++ b/loe/site_static/loe.css
@@ -595,8 +595,8 @@ button.region_filter:focus {
     stroke: var(--primary-color);
 }
 
-.d3_plot .tick {
-    stroke: var(--text-color);
+.d3_plot .tick > text {
+    fill: var(--text-color);
 }
 
 .d3_plot circle {
